chore: update order method
