# java/lib/api/openapi.yaml
@@ -209,6 +209,16 @@ paths:
           type: string
           x-order: "6"
         style: form
+      - description: Filter orders by creator
+        explode: true
+        in: query
+        name: creator
+        required: false
+        schema:
+          description: Filter orders by creator
+          type: string
+          x-order: "7"
+        style: form
       responses:
         "200":
           content:
@@ -910,14 +920,17 @@ components:
         note: note
         uid: uid
         amount: amount
+        creator: creator
         metadata:
           key: metadata
-        user_id: user_id
         currency: currency
         expiration: 0
       properties:
         amount:
           description: Amount, supports decimal values
+          type: string
+        creator:
+          description: The identifier of the user who created the order
           type: string
         currency:
           description: 'Currency code. e.g.: USDT, TON, ETH'
@@ -938,13 +951,9 @@ components:
         uid:
           description: External ID, the order ID in the merchant system
           type: string
-        user_id:
-          description: ID of the user who needs to make the payment
-          type: string
       required:
       - amount
       - currency
-      - user_id
       type: object
     CreateRefundRequest:
       example:
@@ -1565,6 +1574,7 @@ components:
       example:
         note: note
         amount: amount
+        creator: creator
         metadata:
           key: metadata
         created_at: created_at
@@ -1585,6 +1595,9 @@ components:
           type: string
         created_at:
           description: Order creation time
+          type: string
+        creator:
+          description: The identifier of the user who created the order
           type: string
         currency:
           description: Currency symbol
@@ -1660,6 +1673,7 @@ components:
         items:
         - note: note
           amount: amount
+          creator: creator
           metadata:
             key: metadata
           created_at: created_at
@@ -1676,6 +1690,7 @@ components:
           status: status
         - note: note
           amount: amount
+          creator: creator
           metadata:
             key: metadata
           created_at: created_at
